--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "*",
-    "mongoose": "*",
-    "cors": "*",
     "bcrypt": "*",
-    "json-web-token": "*",
-    "passport": "*"
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "json-web-token": "^2.1.3",
+    "mongoose": "^4.13.3",
+    "passport": "^0.4.0"
   },
   "author": "A. Weaver",
   "license": "ISC"
